--- a/_data/preferences_positive.yml
+++ b/_data/preferences_positive.yml
@@ -50,7 +50,7 @@
   note:   |
     As a rule, I prefer an individual working principle to the command.
     It's not about sociofobia - it's about personal preferences and life principles.
-    As experience shows when working individually, I show much higher results and get more pleasure from what I do.
+    As experience shows when working individually, I show much higher results and get more pleasure from things I do.
 -
   icon:   "/img/flask.png"
   title:  "Automated tests"
