--- a/_data/links.yml
+++ b/_data/links.yml
@@ -7,6 +7,6 @@
   icon: "fa-linkedin"
   name: "Linkedin"
 -
-  url:  "https://www.facebook.com/llstrainll"
-  icon: "fa-facebook"
-  name: "Facebook"
+  url:  "https://bitbucket.org/timCF/"
+  icon: "fa-bitbucket"
+  name: "Bitbucket"
