--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,14 @@
 -
+  name: "Happeteer"
+  technologies: ["haskell"]
+  description: "Puppeteer client library (web-scraping oriented)"
+  github: "https://github.com/timCF/happeteer"
+-
+  name: "ExCraft"
+  technologies: ["elixir"]
+  description: "Type-safe constructors for Elixir structures"
+  github: "https://github.com/tim2CF/ex_craft"
+-
   name: "Boilex"
   technologies: ["elixir"]
   description: "Project configuration focused on code safety"
