--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,7 +1,7 @@
 my_name: |
   Ilja Tkachuk
 my_subtitle: |
-  Erlang, Elixir, Haskell developer. Functional programming enthusiast.
+  Software developer. Functional programming enthusiast.
 summary_p1: |
   I have been programming since 2012.
   At the beginning I had some experience of development in imperative languages like C++ and JavaScript,
