--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,4 @@
 -
-  name: "ExIco"
-  technologies: ["elixir"]
-  description: "Ratings of ICOs (web-scraping from other sites)"
-  demo: "https://178.128.192.125"
--
   name: "Happeteer"
   technologies: ["haskell"]
   description: "Puppeteer client library (web-scraping oriented)"
@@ -13,6 +8,11 @@
   technologies: ["elixir"]
   description: "Memoization of function calls"
   github: "https://github.com/timCF/meme"
+-
+  name: "haskell-tools"
+  technologies: ["bash"]
+  description: "Utilities for builds and deploys of Haskell programs"
+  github: "https://github.com/timCF/haskell-tools"
 -
   name: "ExCraft"
   technologies: ["elixir"]
