--- a/_data/content.yml
+++ b/_data/content.yml
@@ -5,16 +5,18 @@ my_subtitle: |
 summary_p1: |
   I have been programming since 2012.
   At the beginning I had some experience of development in imperative languages like C++ and JavaScript,
-  but I did well only when I switched to functional languages like Erlang and Elixir.
+  but I did well only when I switched to functional languages like Erlang, Elixir and Haskell.
 summary_p2: |
-  Today my main skill is functional backend programming
+  Today my main skill is functional programming
   and I'm strong expert in BEAM/Erlang VM platform, Erlang and Elixir languages.
   I have strong understanding of multithreading and interaction between Erlang processes.
   Of course in commercial development I'm using mainstream frameworks like OTP, Phoenix and Ecto.
 summary_p3: |
-  Future plans - to become more familiar with static-typed functional languages like Haskell.
+  Future plans - to become more familiar with static-typed functional languages.
   If static-typed languages for BEAM/Erlang VM like
   <a href="https://github.com/wende/elchemy" target="_blank" class="text-info">Elchemy</a>
   or
   <a href="https://github.com/alpaca-lang/alpaca" target="_blank" class="text-info">Alpaca</a>
   will be successful - I will be happy to switch.
+  Also I have a huge interest in Haskell programming language and I'm doing my own personal project
+  using Yesod Web Framework.
