--- a/_data/links.yml
+++ b/_data/links.yml
@@ -7,6 +7,6 @@
   icon: "fa-linkedin"
   name: "Linkedin"
 -
-  url:  "https://bitbucket.org/timCF/"
+  url:  "https://bitbucket.org/tkachuk-labs/"
   icon: "fa-bitbucket"
   name: "Bitbucket"
