add proper video support for talks

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,5 +1,5 @@
 -
-  video_url:  "//tkachuk-labs.bitbucket.io/9-scalar-blindness.mp4"
+  video_url:  "//tkachuk-labs.github.io/talks/9-scalar-blindness.mp4"
   video_type: "video/mp4"
   video_poster: "/img/9-scalar-blindness-poster.png"
   slides_url: "//timcf.github.io/erlang-universe/9-scalar-blindness.html#1"
