fix linkedin link

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -3,7 +3,7 @@
   icon: "fa-github"
   name: "Github"
 -
-  url:  "https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa"
+  url:  "https://www.linkedin.com/in/ilja-tkachuk-a59a30aa/"
   icon: "fa-linkedin"
   name: "Linkedin"
 -
