refacor icons img -> fonts WIP

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -4,7 +4,7 @@
   name: "Github"
 -
   url:  "https://www.linkedin.com/in/ilja-tkachuk-a59a30aa/"
-  icon: "fa-linkedin"
+  icon: "fa-linkedin-in"
   name: "Linkedin"
 -
   url:  "https://bitbucket.org/tkachuk-labs/"
