--- a/_data/preferences_negative.yml
+++ b/_data/preferences_negative.yml
@@ -1,5 +1,5 @@
 -
-  icon:   "devicons-icon devicons devicons-go"
+  icon:   "font-awesome-icon fas fa-shoe-prints"
   title:  "Imperative code"
   note:   |
     I understand the great importance of imperative languages.
