--- a/_data/technologies.yml
+++ b/_data/technologies.yml
@@ -1,119 +1,119 @@
 haskell:
-  icon:   "/img/haskell.png"
+  icon:   "devicons-icon devicons devicons-haskell"
   site:   "https://www.haskell.org/"
   name:   "Haskell (ML family)"
   skill:  66
   color:  "#5e5086"
 yesod:
-  icon:   "/img/yesod.png"
+  icon:   "font-awesome-icon fab fa-y-combinator"
   site:   "https://www.yesodweb.com/"
   name:   "Yesod Web Framework"
   skill:  75
   color:  "#5e5086"
 beam:
-  icon:   "/img/erlang.png"
+  icon:   "font-awesome-icon fab fa-erlang"
   site:   "https://www.erlang.org/"
   name:   "BEAM/Erlang VM"
   skill:  100
   color:  "#B83998"
 metaprogramming:
-  icon:   "/img/elixir.png"
+  icon:   "font-awesome-icon fas fa-tint"
   site:   "http://elixir-lang.org/"
   name:   "Elixir metaprogrmming"
   skill:  100
   color:  "#6e4a7e"
 elixir:
-  icon:   "/img/elixir.png"
+  icon:   "font-awesome-icon fas fa-tint"
   site:   "http://elixir-lang.org/"
   name:   "Elixir"
   skill:  100
   color:  "#6e4a7e"
 erlang:
-  icon:   "/img/erlang.png"
+  icon:   "font-awesome-icon fab fa-erlang"
   site:   "https://www.erlang.org/"
   name:   "Erlang"
   skill:  90
   color:  "#B83998"
 bash:
-  icon:   "/img/bash.png"
+  icon:   "font-awesome-icon fas fa-terminal"
   site:   "https://en.wikipedia.org/wiki/Bash_(Unix_shell)"
   name:   "Bash"
   skill:  88
   color:  "#89e051"
 git:
-  icon:   "/img/git.png"
+  icon:   "font-awesome-icon fab fa-git-alt"
   site:   "https://git-scm.com/"
   name:   "GIT"
   skill:  85
   color:  "#f14e32"
 sql:
-  icon:   "/img/mysql.png"
+  icon:   "devicons-icon devicons devicons-postgresql"
   site:   "https://www.mysql.com/"
   name:   "SQL"
   skill:  87
   color:  "#dad8d8"
 nosql:
-  icon:   "/img/cassandra.png"
+  icon:   "font-awesome-icon fas fa-eye"
   site:   "http://cassandra.apache.org/"
   name:   "noSQL"
   skill:  40
   color:  "#dad8d8"
 scala:
-  icon:   "/img/scala.png"
+  icon:   "devicons-icon devicons devicons-scala"
   site:   "http://www.scala-lang.org/"
   name:   "Scala"
   skill:  20
   color:  "#c22d40"
 clojure:
-  icon:   "/img/clojure.png"
+  icon:   "devicons-icon devicons devicons-clojure_alt"
   site:   "https://clojure.org/"
   name:   "Clojure"
   skill:  35
   color:  "#db5855"
 livescript:
-  icon:   "/img/livescript.jpg"
+  icon:   "devicons-icon devicons devicons-coffeescript"
   site:   "http://livescript.net/"
   name:   "Livescript"
   skill:  85
   color:  "#499886"
 bootstrap:
-  icon:   "/img/bootstrap.png"
+  icon:   "devicons-icon devicons devicons-bootstrap"
   site:   "http://getbootstrap.com/"
   name:   "Twitter Bootstrap"
   skill:  70
   color:  "#7952b3"
 ci:
-  icon:   "/img/ci.png"
+  icon:   "devicons-icon devicons devicons-travis"
   site:   "https://travis-ci.org/"
   name:   "CI"
   skill:  60
   color:  "#dad8d8"
 phantomjs:
-  icon:   "/img/phantomjs.png"
+  icon:   "font-awesome-icon fas fa-ghost"
   site:   "http://phantomjs.org/"
   name:   "Phantomjs Engine"
   skill:  80
   color:  "#2ecbd6"
 brunch:
-  icon:   "/img/brunch-acid.png"
+  icon:   "font-awesome-icon fas fa-utensils"
   site:   "http://brunch.io/"
   name:   "Brunch builder"
   skill:  65
   color:  "#008000"
 reactjs:
-  icon:   "/img/react.png"
+  icon:   "font-awesome-icon fab fa-react"
   site:   "https://facebook.github.io/react/"
   name:   "React"
   skill:  75
   color:  "#61dafb"
 react-native:
-  icon:   "/img/react.png"
+  icon:   "font-awesome-icon fab fa-react"
   site:   "https://facebook.github.io/react-native/"
   name:   "React-Native"
   skill:  75
   color:  "#05A5D1"
 jekyll:
-  icon:   "/img/jekyll.png"
+  icon:   "font-awesome-icon fas fa-vial"
   site:   "https://jekyllrb.com/"
   name:   "Jekyll"
   skill:  50
