--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,8 +1,8 @@
 -
-  video_url:  "//tkachuk-labs.github.io/talks/9-scalar-blindness.mp4"
+  video_url:  "https://tkachuk-labs.github.io/talks/9-scalar-blindness.mp4"
   video_type: "video/mp4"
   video_poster: "/img/9-scalar-blindness-poster.png"
-  slides_url: "//timcf.github.io/erlang-universe/9-scalar-blindness.html#1"
+  slides_url: "https://itkach.uk/erlang-universe/9-scalar-blindness.html#1"
   title: "Scalar blindness"
   description: |
     It’s mostly about common practice of scalar types overloading.
