add biography to official layout

--- a/_data/contacts.yml
+++ b/_data/contacts.yml
@@ -1,9 +1,9 @@
 -
   title: Location
-  value: Tallinn, Estonia
+  value: Tallinn, Republic of Estonia
 -
   title: Email
-  value: tim4CF@gmail.com
+  value: tkachuk.labs@gmail.com
 -
   title: Skype
   value: tkachuk.i.m.
