--- a/_data/short_facts.yml
+++ b/_data/short_facts.yml
@@ -1,13 +1,11 @@
-Born:         "1990"
+Birth:        "1990"
 Sex:          "male"
-Erlang:       "since 2012"
-Elixir:       "productuion since 2013"
 Education:    "MSU"
-Location:     "Tallinn, Estonia"
+Programming:  "since 2012"
+Location:     "Tallinn, Republic of Estonia"
 Languages:    "Russian, English"
 Citizenship:  "Russian Federation"
 Smoking:      "negative"
 Alcohol:      "negative"
 Family:       "no"
-Culture:      "cyberpunk"
 Religion:     "atheism"
