--- a/_data/pdf_popup.yml
+++ b/_data/pdf_popup.yml
@@ -5,6 +5,9 @@
   title:    "Summary"
   onchange: "toggleCheckbox(this, 'summary')"
 -
+  title:    "Biography"
+  onchange: "toggleCheckbox(this, 'biography')"
+-
   title:    "Preferences"
   onchange: "toggleCheckbox(this, 'preferences_positive'); toggleCheckbox(this, 'preferences_negative');"
 -
