upgrade projects and tech

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -4,7 +4,7 @@ my_subtitle: |
   Software developer. Functional programming enthusiast.
 summary_p1: |
   I have been programming since 2012.
-  At the beginning I had some experience of development in imperative languages like C++ and JavaScript,
+  At the beginning I had some experience of development in imperative languages,
   but I did well only when I switched to functional languages like Erlang, Elixir and Haskell.
 summary_p2: |
   Today my main skill is functional programming
